# OEC-Open_Energy_Controller

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE_CODE.md  CONTRIBUTING.md  CYCLICAL_FEATURES_IMPLEMENTATION.md  Cargo.toml  Claude.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  MASSIVE_TODO_LIST.md  OPTIMIZATIONS.md  POWER_FLOW_ARCHITECTURE.md  README.md  deny.toml  docker-compose.test.yml  docker-compose.yml  verify_cyclical.py
.cargo/: config.toml
config/: default.toml  development.toml  production.toml  prometheus.yml  test.toml
config/device_profiles/: generic_battery.toml  huawei_luna2000.toml  solaredge_storedge.toml
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  USER_GUIDE.md
docs/ADR/: 0001-price-source.md  001-rust-choice.md  002-database-choice.md  003-optimization-strategy.md  004-modbus-abstraction.md  005-forecast-approach.md  006-ml-framework.md  PROCESS.md  template.md
migrations/: 001_initial.sql  002_ev_and_inverter_states.sql  003_households_and_history.sql  004_forecasts_and_optimization.sql  005_database_enhancements.sql  006_power_flow_snapshots.sql
src/: auth.rs  config.rs  discovery.rs  lib.rs  main.rs  modbus.rs  telemetry.rs
src/api/: battery.rs  devices.rs  error.rs  ev_charger.rs  forecast.rs  grid.rs  health.rs  inverter.rs  mod.rs  openapi.rs  optimize.rs  response.rs  schedule.rs  status.rs  v1.rs  weather.rs
src/controller/: maintenance.rs  mod.rs  pid.rs  power_transition.rs  safety.rs  safety_monitor.rs  scheduler.rs  v2x_controller.rs
src/database/: mod.rs
src/database/models/: battery_state.rs  device.rs  mod.rs  price.rs  schedule.rs
src/database/repositories/: consumption.rs  mod.rs  price.rs  production.rs
src/domain/: battery.rs  ev_charger.rs  forecast.rs  grid.rs  inverter.rs  mod.rs  schedule.rs  types.rs
src/forecast/: consumption.rs  engine.rs  features.rs  metrics.rs  mod.rs  prices.rs  production.rs  weather.rs
src/hardware/: factory.rs  mod.rs
src/hardware/modbus/: battery.rs  mod.rs
src/hardware/ocpp/: ev_charger.rs  mod.rs
src/ml/: inference.rs  mod.rs  models.rs  smartcore.rs  training.rs
src/ml/models/: base.rs  mod.rs  price_lstm.rs  solar_production.rs
src/ocpp/: client.rs  messages.rs  mod.rs
src/optimizer/: constraints.rs  dp.rs  greedy.rs  mod.rs  types.rs
src/optimizer/strategies/: milp.rs  mod.rs
src/power_flow/: constraints.rs  inputs.rs  mod.rs  model.rs  snapshot.rs
src/repo/: battery_states.rs  consumption.rs  devices.rs  mod.rs  pg.rs  prices.rs  production.rs  schedules.rs  snapshots.rs
src/simulation/: advanced_house.rs  battery_thermal.rs  environment.rs  ev_driver.rs  grid.rs  house.rs  hvac.rs  mod.rs  solar.rs  thermal.rs  three_phase.rs
src/utils/: mod.rs  raspberry_pi.rs
tests/: integration_smoke.rs  load_tests.rs  modbus_mock_server.rs
tests/load/: README.md  mod.rs  stress_test.rs
