[package]
name = "open-energy-controller"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Open Energy Controller - edge-first battery control skeleton (v2 spec)"
repository = "https://example.invalid/open-energy-controller"

[features]
default = ["sim"]
sim = []
db = ["sqlx/postgres", "sqlx/runtime-tokio-rustls"]
modbus = ["tokio-modbus"]
discovery = ["mdns-sd"]
metrics = ["prometheus", "axum-prometheus"]
swagger = ["utoipa", "utoipa-swagger-ui"]

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
figment = { version = "0.10", features = ["env", "toml"] }

sqlx = { version = "0.8", default-features = false, features = ["macros", "uuid", "chrono", "json"], optional = true }
tokio-modbus = { version = "0.10", optional = true }
mdns-sd = { version = "0.12", optional = true }

prometheus = { version = "0.13", optional = true }
axum-prometheus = { version = "0.6", optional = true }

utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"], optional = true }
utoipa-swagger-ui = { version = "8", features = ["axum"], optional = true }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
