[package]
name = "open-energy-controller"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Open Energy Controller - edge-first battery control skeleton (v2 spec)"
repository = "https://example.invalid/open-energy-controller"

[features]
default = ["sim"]
sim = []
db = ["sqlx/postgres", "sqlx/runtime-tokio-rustls"]
modbus = ["dep:tokio-modbus"]
discovery = ["mdns-sd", "trust-dns-resolver"]
metrics = ["prometheus", "axum-prometheus"]
swagger = ["utoipa", "utoipa-swagger-ui"]
optimization = ["good_lp", "ndarray", "nalgebra", "statrs"]

[dependencies]
# Error handling
anyhow = "1"
thiserror = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bincode = "1.3"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-full", "timeout"] }
hyper = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
reqwest-middleware = "0.3"
reqwest-retry = "0.6"

# Configuration
figment = { version = "0.10", features = ["env", "toml"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["macros", "uuid", "chrono", "json"], optional = true }

# Hardware protocols
tokio-modbus = { version = "0.10", optional = true }
byteorder = "1.5"

# Network discovery
mdns-sd = { version = "0.12", optional = true }
trust-dns-resolver = { version = "0.23", optional = true }

# Optimization & Math
good_lp = { version = "1.7", optional = true }
ndarray = { version = "0.15", optional = true }
nalgebra = { version = "0.32", optional = true }
statrs = { version = "0.16", optional = true }
ordered-float = "4.2"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Metrics
prometheus = { version = "0.13", optional = true }
axum-prometheus = { version = "0.6", optional = true }

# API Documentation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"], optional = true }
utoipa-swagger-ui = { version = "8", features = ["axum"], optional = true }

# Utilities
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
itertools = "0.13"
once_cell = "1.19"
parking_lot = "0.12"

[dev-dependencies]
mockall = "0.13"
rstest = "0.22"
proptest = "1.5"
fake = { version = "2.9", features = ["derive", "chrono"] }
wiremock = "0.6"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
