[package]
name = "open-energy-controller"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Open Energy Controller - edge-first battery control skeleton (v2 spec)"
repository = "https://example.invalid/open-energy-controller"

[features]
default = ["sim"]
sim = []
db = ["sqlx/postgres", "sqlx/runtime-tokio-rustls", "sea-query", "sea-query-binder"]
modbus = ["dep:tokio-modbus"]
discovery = ["mdns-sd", "trust-dns-resolver", "pnet"]
metrics = ["prometheus", "axum-prometheus", "metrics", "metrics-exporter-prometheus"]
swagger = ["utoipa", "utoipa-swagger-ui"]
optimization = ["good_lp", "minilp", "ndarray", "nalgebra", "statrs", "noisy_float"]
ml = ["onnxruntime", "linfa", "linfa-linear", "linfa-trees", "smartcore", "polars"]
ocpp = ["tokio-tungstenite"]
security = ["argon2", "jsonwebtoken", "ring"]
utils = ["derive_more"]

[dependencies]
# Error handling
anyhow = "1"
thiserror = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
bincode = "1.3"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
time = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
ulid = "1.1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tracing-log = "0.2"

# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-full", "timeout"] }
hyper = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
reqwest-middleware = "0.3"
reqwest-retry = "0.6"

# Configuration
figment = { version = "0.10", features = ["env", "toml"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["macros", "uuid", "chrono", "json"], optional = true }
sea-query = { version = "0.31", optional = true }
sea-query-binder = { version = "0.6", features = ["sqlx-postgres"], optional = true }

# Hardware protocols
tokio-modbus = { version = "0.10", optional = true }
byteorder = "1.5"

# OCPP (EV Charging Protocol)
tokio-tungstenite = { version = "0.21", optional = true }

# Network discovery
mdns-sd = { version = "0.12", optional = true }
trust-dns-resolver = { version = "0.23", optional = true }
pnet = { version = "0.34", optional = true }

# Optimization & Math
good_lp = { version = "1.7", optional = true }
minilp = { version = "0.2", optional = true }
ndarray = { version = "0.15", optional = true }
nalgebra = { version = "0.32", optional = true }
statrs = { version = "0.16", optional = true }
ordered-float = "4.2"
noisy_float = { version = "0.2", optional = true }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Metrics & Observability
prometheus = { version = "0.13", optional = true }
axum-prometheus = { version = "0.6", optional = true }
metrics = { version = "0.21", optional = true }
metrics-exporter-prometheus = { version = "0.13", optional = true }
opentelemetry = { version = "0.21", optional = true }
opentelemetry-prometheus = { version = "0.14", optional = true }

# API Documentation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"], optional = true }
utoipa-swagger-ui = { version = "8", features = ["axum"], optional = true }

# Machine Learning
onnxruntime = { version = "0.0.14", optional = true }
linfa = { version = "0.7", optional = true }
linfa-linear = { version = "0.7", optional = true }
linfa-trees = { version = "0.7", optional = true }
smartcore = { version = "0.3", optional = true }
polars = { version = "0.36", features = ["lazy", "temporal", "parquet"], optional = true }

# Security
argon2 = { version = "0.5", optional = true }
jsonwebtoken = { version = "9.2", optional = true }
ring = { version = "0.17", optional = true }

# Utilities
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
itertools = "0.13"
once_cell = "1.19"
parking_lot = "0.12"
derive_more = { version = "0.99", optional = true }
lazy_static = "1.4"

[dev-dependencies]
mockall = "0.13"
rstest = "0.22"
proptest = "1.5"
fake = { version = "2.9", features = ["derive", "chrono"] }
wiremock = "0.6"
criterion = { version = "0.5", features = ["html_reports"] }
testcontainers = "0.15"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
